crates/secretenv-core/tests/ui/public_api/opaque_facade_internals.stderr
error[E0603]: struct `KnownKeyApproval` is private
 --> tests/ui/public_api/opaque_facade_internals.rs:5:5
  |
5 |     KnownKeyApproval, RecipientSetApproval, TrustApproval, TrustApprovalKind,
  |     ^^^^^^^^^^^^^^^^ private struct
  |
note: the struct `KnownKeyApproval` is defined here
 --> src/api/trust.rs
  |
  | struct KnownKeyApproval {
  | ^^^^^^^^^^^^^^^^^^^^^^^

error[E0603]: struct `RecipientSetApproval` is private
 --> tests/ui/public_api/opaque_facade_internals.rs:5:23
  |
5 |     KnownKeyApproval, RecipientSetApproval, TrustApproval, TrustApprovalKind,
  |                       ^^^^^^^^^^^^^^^^^^^^ private struct
  |
note: the struct `RecipientSetApproval` is defined here
 --> src/api/trust.rs
  |
  | struct RecipientSetApproval {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0603]: enum `TrustApprovalKind` is private
 --> tests/ui/public_api/opaque_facade_internals.rs:5:60
  |
5 |     KnownKeyApproval, RecipientSetApproval, TrustApproval, TrustApprovalKind,
  |                                                            ^^^^^^^^^^^^^^^^^ private enum
  |
note: the enum `TrustApprovalKind` is defined here
 --> src/api/trust.rs
  |
  | enum TrustApprovalKind {
  | ^^^^^^^^^^^^^^^^^^^^^^

error[E0616]: field `inner` of struct `VerifiedFileEncArtifact` is private
 --> tests/ui/public_api/opaque_facade_internals.rs:9:22
  |
9 |     let _ = artifact.inner;
  |                      ^^^^^ private field

error[E0624]: associated function `from_inner` is private
  --> tests/ui/public_api/opaque_facade_internals.rs:10:38
   |
10 |     let _ = VerifiedFileEncArtifact::from_inner;
   |                                      ^^^^^^^^^^ private associated function
   |
  ::: src/api/file.rs
   |
   |     pub(crate) fn from_inner(inner: VerifiedFileEncDocument) -> Self {
   |     ---------------------------------------------------------------- private associated function defined here

error[E0616]: field `content` of struct `VerifiedKvEncArtifact` is private
  --> tests/ui/public_api/opaque_facade_internals.rs:14:22
   |
14 |     let _ = artifact.content;
   |                      ^^^^^^^ private field

error[E0616]: field `inner` of struct `VerifiedKvEncArtifact` is private
  --> tests/ui/public_api/opaque_facade_internals.rs:15:22
   |
15 |     let _ = artifact.inner;
   |                      ^^^^^ private field

error[E0624]: associated function `from_inner` is private
  --> tests/ui/public_api/opaque_facade_internals.rs:16:36
   |
16 |     let _ = VerifiedKvEncArtifact::from_inner;
   |                                    ^^^^^^^^^^ private associated function
   |
  ::: src/api/kv.rs
   |
   |     pub(crate) fn from_inner(content: KvEncContent, inner: VerifiedKvEncDocument) -> Self {
   |     ------------------------------------------------------------------------------------- private associated function defined here

error[E0624]: method `keys` is private
  --> tests/ui/public_api/opaque_facade_internals.rs:20:24
   |
20 |     let _ = recipients.keys();
   |                        ^^^^ private method
   |
  ::: src/api/key.rs
   |
   |     pub(crate) fn keys(&self) -> &[VerifiedRecipientKey] {
   |     ---------------------------------------------------- private method defined here

error[E0616]: field `kind` of struct `TrustApproval` is private
  --> tests/ui/public_api/opaque_facade_internals.rs:24:22
   |
24 |     let _ = approval.kind;
   |                      ^^^^ private field
